--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div id="map"></div>
 <!-- partial -->
-  <script  src="script.js"></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
